qtwebsockets-opensource-src (5.12.5-1) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * New upstream release.
  * Bump Qt build-dependencies to 5.12.5.
  * Simplify debian/rules by using the debian/not-installed file.

 -- Scarlett Moore <sgmoore@kde.org>  Fri, 09 Aug 2019 11:13:52 -0700

qtwebsockets-opensource-src (5.12.4-1) experimental; urgency=medium

  [ Scarlett Moore ]
  * Improve abstract for doc-base.

  [ Dmitry Shachnev ]
  * New upstream release.
  * Set the TESTRUNNER environment variable when running the tests, instead
    of calling xvfb-run directly. This fixes build with nocheck profile
    (closes: #929442). Thanks to Sven Mueller for the initial patch!
  * Add a proper debian/clean file.
  * Add Build-Depends-Package field to debian/libqt5websockets5.symbols.
  * Bump Qt build-dependencies to 5.12.4.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 20 Jun 2019 10:54:39 +0300

qtwebsockets-opensource-src (5.12.3-1) experimental; urgency=medium

  [ Scarlett Moore ]
  * Update packaging to use doc-base as per policy 9.10.

  [ Dmitry Shachnev ]
  * New upstream release.
  * Bump Qt build-dependencies to 5.12.3.
  * Update Homepage URL.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 22 Apr 2019 13:15:37 +0300

qtwebsockets-opensource-src (5.12.2-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.12.2.
  * Update debian/libqt5websockets5.symbols from the current build log.
  * Drop skip_test_failing_on_chroots.patch, the issue was fixed upstream.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 23 Mar 2019 14:39:31 +0300

qtwebsockets-opensource-src (5.11.3-5) unstable; urgency=medium

  * Ignore test failure in mips64el to allow the Qt transition to continue.
    The code has not changed and built before without problems, so we suspect
    the issue must probably be somewhere else.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 28 Dec 2018 15:33:30 -0300
